<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radiotype"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioprop"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_lands"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radiocar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_FlatsVillas"
                    android:textSize="18sp" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/jobDescInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_description"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/itemdescr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="#1f3498"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:textColorLink="@color/colorPrimary"
                    android:textStyle="normal|bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonSelect"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="1"
                        android:text="@string/image1select" />

                    <Button
                        android:id="@+id/buttonSelect3"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/buttonSelect"
                        android:layout_toRightOf="@+id/buttonSelect"
                        android:layout_weight="1"
                        android:text="@string/image2select" />

                    <Button
                        android:id="@+id/buttonSelect2"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        android:text="@string/image3select" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="270dp"
                android:layout_above="@+id/editTextImageName"
                android:layout_alignLeft="@+id/imageView2"
                android:layout_alignStart="@+id/imageView2" />

            <Button
                android:id="@+id/buttonUpload"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/uploadbtn" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>